--- a/Hello World C++/Hello World C++/Hello World C++.vcxproj.filters
+++ b/Hello World C++/Hello World C++/Hello World C++.vcxproj.filters
@@ -14,6 +14,8 @@
     <ClCompile Include="Source\SettingsWindow.cpp" />
     <ClCompile Include="Source\StandardSelectScreen.cpp" />
     <ClCompile Include="Source\SubtractionCalc.cpp" />
+    <ClCompile Include="Source\Navigation\AlgebraSelectScreen.cpp" />
+    <ClCompile Include="Source\Navigation\StandardSelectScreen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Headers\Calc.h" />
