Redid calc  & some other stuff
over all better.

Added a new algebra formula, a changeable password and the custom console colors save to a file.

--- a/Hello World C++/Hello World C++/Hello World C++.vcxproj
+++ b/Hello World C++/Hello World C++/Hello World C++.vcxproj
@@ -127,18 +127,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source\AdditionCalc.cpp" />
-    <ClCompile Include="Source\AlgebraCalc AxBy.cpp" />
+    <ClCompile Include="Calculators\Algebra\Ax^2+Bx+C\Parab Calc.cpp" />
+    <ClCompile Include="Calculators\Calc.cpp" />
+    <ClCompile Include="Calculators\Algebra\Ax+By\AlgebraCalc AxBy.cpp" />
+    <ClCompile Include="Calculators\Pathagorean.cpp" />
+    <ClCompile Include="Settings\Reset Password\Reset Password.cpp" />
     <ClCompile Include="Source\AlgebraSelectScreen.cpp" />
-    <ClCompile Include="Source\AxBy Redo.cpp" />
-    <ClCompile Include="Source\ColorSettings.cpp" />
-    <ClCompile Include="Source\CustomColorSetting.cpp" />
+    <ClCompile Include="Calculators\Algebra\Ax+By\AxBy Redo.cpp" />
+    <ClCompile Include="Settings\Custom Colors\ColorSettings.cpp" />
+    <ClCompile Include="Settings\Custom Colors\ColorSettingWriteToFile.cpp" />
+    <ClCompile Include="Settings\Custom Colors\CustomColorSetting.cpp" />
     <ClCompile Include="Source\DebugWindow.cpp" />
-    <ClCompile Include="Source\DivisionCalc.cpp" />
-    <ClCompile Include="Source\SubtractionCalc.cpp" />
+    <ClCompile Include="Source\GeometrySelectionScreen.cpp" />
     <ClCompile Include="Source\StandardSelectScreen.cpp" />
-    <ClCompile Include="Source\SettingsWindow.cpp" />
-    <ClCompile Include="Source\MultiplicationCalc.cpp" />
+    <ClCompile Include="Settings\SettingsScreen.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
